--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,10 @@
   "version": 2,
   "cleanUrls": true,
   "rewrites": [
-    { "source": "/", "destination": "/simulation_enhanced.html" }
+    { "source": "/", "destination": "/index.html" }
   ],
   "routes": [
-    { "src": "/index.html", "dest": "/simulation_enhanced.html" },
-    { "src": "/$", "dest": "/simulation_enhanced.html" }
+    { "src": "/$", "dest": "/index.html" }
   ]
 }
 
