--- a/vercel.json
+++ b/vercel.json
@@ -2,10 +2,12 @@
   "version": 2,
   "cleanUrls": true,
   "rewrites": [
-    { "source": "/", "destination": "/index.html" }
+    { "source": "/", "destination": "/index.html" },
+    { "source": "/(.*)", "destination": "/index.html" }
   ],
   "routes": [
-    { "src": "/$", "dest": "/index.html" }
+    { "src": "/$", "dest": "/index.html", "headers": { "cache-control": "no-cache" } },
+    { "src": "/index.html", "dest": "/index.html", "headers": { "cache-control": "no-cache" } }
   ]
 }
 
